--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="imageBox">
       <div class="imageInn">
-        <a href="index.html"><img src="image/top.png" style="margin-left: 1rem;" class="logo"></a>
+        <a href="index.html"><img src="image/Books-v.gif" width="50px" height="50px" style="margin-left: 1rem; text-decoration: none;" class="logo">StudyBuddy</a>
       </div>
-      <div class="hoverImg">
-        <a href="index.html"><img src="image/Pin-on-Gifs.gif" width="100px" height="100px"
+      <!-- <div class="hoverImg">
+        <a href="index.html"><img src="image/Books-v.gif" width="100px" height="100px"
             style="margin-left: 1rem;"></a>
-      </div>
+      </div> -->
     </div>
 
     <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#nav"
